# Everlast_Voicetool_MaxMoench

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
scripts/: prepare-tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: page.tsx
