[package]
name = "app"
version = "0.1.0"
description = "Voice Everlast Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
once_cell = "1"


# Logging (optional, aber gut für Debug)
tauri-plugin-log = "2"

# ✅ RICHTIGES Global Shortcut Plugin (Tauri v2)
tauri-plugin-global-shortcut = "2"
